assets/css/layout.css
:root {
  --primary-50: 236 253 245;
  --primary-100: 209 250 229;
  --primary-200: 167 243 208;
  --primary-300: 110 231 183;
  --primary-400: 52 211 153;
  --primary-500: 16 185 129;
  --primary-600: 5 150 105;
  --primary-700: 4 120 87;
  --primary-800: 6 95 70;
  --primary-900: 4 78 56;
  --primary-950: 2 44 34;
  --surface-0: 255 255 255;
  --surface-50: 249 250 251;
  --surface-100: 243 244 246;
  --surface-200: 229 231 235;
  --surface-300: 209 213 219;
  --surface-400: 156 163 175;
  --surface-500: 107 114 128;
  --surface-600: 75 85 99;
  --surface-700: 55 65 81;
  --surface-800: 31 41 55;
  --surface-900: 17 24 39;
  --surface-950: 8 8 8;
}

html,
body,
#__nuxt {
  width: 100%;
  height: 100%;
}

.bg {
  background-image: radial-gradient(hsla(var(--bc)/.2) 0.5px, hsla(var(--b2)/1) 0.5px);
  background-size: 5px 5px;
}

.table>thead>tr>th.custom {
  @apply bg-base-100 z-40 top-0 sticky;
}

.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.admin-table {
  @apply table text-base-content border-b-secondary border-b;
}

.admin-table thead {
  @apply bg-base-300 h-full;
}

.admin-table tr {
  @apply border-secondary;
}

